# Bierzee

./: README.md  privacy.md
server/api/: Cargo.toml
server/api/src/: appdata.rs  config.rs  error.rs  main.rs
server/api/src/routes/: login.rs  logout.rs  mod.rs
server/api/src/routes/auth/: login.rs  mod.rs  session.rs
server/api/src/routes/beer/: drink.rs
server/api/src/routes/payment/: balance.rs  broke.rs
server/api/src/routes/system/: add_user.rs  mod.rs  owes.rs  set_beer_price.rs
server/api/src/routes/v1/: about.rs  mod.rs
server/api/src/routes/v1/auth/: login.rs  logout.rs  mod.rs  session.rs
server/api/src/routes/v1/beer/: drink.rs  drunk.rs  mod.rs  price.rs
server/api/src/routes/v1/notification/: complete.rs  list.rs  mod.rs
server/api/src/routes/v1/organization/: create.rs  get.rs  mod.rs
server/api/src/routes/v1/payment/: balance.rs  broke.rs  get.rs  list.rs  mod.rs  (+1 more)
server/api/src/services/: login.rs  mod.rs
server/api/src/services/beer/: drink.rs  drunk.rs  mod.rs  price.rs
server/api/src/services/payment/: balance.rs  broke.rs  mod.rs  pay.rs
server/api/src/services/system/: mod.rs  owes.rs  set_admin.rs  set_beer_price.rs
server/dal/: Cargo.toml
server/dal/mysql_migrations/: V1__init.sql  V2__add_payment_denied.sql  V3__notification.sql  V4__beer_purchases.sql  V5__multiple_organization_support.sql
server/dal/src/: _mysql.rs  beer.rs  hashing.rs  lib.rs  payment.rs  session.rs  system.rs  user.rs
server/dal/src/entities/: beer.rs  mod.rs  notification.rs  organization.rs  payment.rs  session.rs  system.rs  user.rs
(+173 files in other folders)
