[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/TobiasDeBruijn/Bierzee"

[dependencies]
thiserror = "1.0.30"
envy = "0.4.2"
time = "0.3.7"

# Actix
actix-web = "4.0.1"
actix-multiresponse = "0.1.0"
actix-cors = "0.6.1"
actix-governor = "0.3.0"

# Tracing
tracing = "0.1.32"
tracing-actix-web = "0.5.1"
tracing-subscriber = "0.3.9"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.dal]
version = "0.1.0"
path = "../dal"

[dependencies.proto]
version = "0.1.0"
path = "../proto"