[package]
name = "dal"
version = "0.1.0"
edition = "2021"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]

[dependencies]
thiserror = "1.0.30"
time = "0.3.7"
rand = "0.8.5"
sha2 = "0.10.2"
bcrypt = "0.12.1"
base64 = "0.13.0"
tracing = "0.1.34"

[dependencies.mysql]
version = "=22.0.0"
default-features = false

[dependencies.refinery]
version = "0.8.4"
default-features = false
features = ["mysql"]
